Added working code for Level2

--- a/d3.html
+++ b/d3.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="svgcontainer"></div>
+  <div id="chartAnalysis"></div>
   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
