Added tooltip code

--- a/d3.html
+++ b/d3.html
@@ -5,8 +5,11 @@
   <title>Data Journalism</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
+
 </head>
 <body>
+  <br><br>
   <div id="svgcontainer"></div>
   <div id="chartAnalysis"></div>
   <script type="text/javascript" src="app.js"></script>
