Added Analysis description

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
   <meta charset="utf-8">
   <title>Data Journalism</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.min.js"></script>
+  
 </head>
 <body>
+  <div class="container data_header">  </div>
+  <div class="text-center">
+    <h1>Current trends shaping people's lives...</h1>
+  </div>
+
+  <div class="container">
     <iframe src="d3.html" frameborder="0" width="800" height="800"></iframe>
-  
+  </div>
 </body>
 </html>
