--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="container">
-    <iframe src="d3.html" frameborder="0" width="800" height="800"></iframe>
+    <iframe src="d3.html" frameborder="0" width="100%" height="800"></iframe>
   </div>
 </body>
 </html>
